--- a/LoginFake/View/Localizable.xcstrings
+++ b/LoginFake/View/Localizable.xcstrings
@@ -6,7 +6,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ola"
+            "value" : "Hola mundo!"
           }
         }
       }
