--- a/LoginFake/View/Localizable.xcstrings
+++ b/LoginFake/View/Localizable.xcstrings
@@ -22,6 +22,9 @@
         }
       }
     },
+    "Incorrect Username or Password" : {
+
+    },
     "Login" : {
       "localizations" : {
         "es" : {
@@ -53,6 +56,9 @@
           }
         }
       }
+    },
+    "Please try again" : {
+
     },
     "Please try again later" : {
       "extractionState" : "manual",
